--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,10 +3,12 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
-
-spring.datasource.hikari.connection-timeout: 20000 #maximum number of milliseconds that a client will wait for a connection
-spring.datasource.hikari.minimum-idl: 5 #minimum number of idle connections maintained by HikariCP in a connection pool
-spring.datasource.hikari.maximum-pool-size: 5 #maximum pool size
-spring.datasource.hikari.idle-timeout: 10000 #maximum idle time for connection
-spring.datasource.hikari.max-lifetime: 1000 # maximum lifetime in milliseconds of a connection in the pool after it is closed.
-spring.datasource.hikari.auto-commit: true #default auto-commit behavior.
+#  datasource:
+#    hikari:
+#      maximum-pool-size: 2
+#      minimum-idle: 1
+#    tomcat:
+#      initial-size: 2
+#      max-active: 2
+#    dbcp2:
+#      max-idle: 2
