--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -12,3 +12,5 @@ server:
 #  client:
 #    registerWithEureka: false
 #    fetchRegistry: true
+eureka.client.register-with-eureka: false
+eureka.client.fetch-registry: true
