--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,8 @@ spring:
       max-active: 2
     dbcp2:
       max-idle: 2
+logging:
+  level:
+    org:
+      springframework:
+        web: DEBUG
